--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.8.0",
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.15.19",
+    "@types/three": "^0.182.0",
+    "axios": "^1.6.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
+    "mongodb": "^7.0.0",
     "next": "^14.2.25",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@auth0/nextjs-auth0": "^3.8.0",
-    "axios": "^1.6.2",
-    "lucide-react": "^0.294.0",
-    "date-fns": "^2.30.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
