--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
     "next": "^14.2.25",
+    "mongodb": "^7.0.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
