--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.294.0",
     "mongodb": "^7.0.0",
     "next": "^14.2.25",
