--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,10 +12,21 @@
     "@auth0/nextjs-auth0": "^3.8.0",
     "@google/generative-ai": "^0.11.0",
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.15.19",
     "@types/three": "^0.182.0",
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^11.18.2",
@@ -26,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-resizable-panels": "^4.4.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zod": "^3.23.8"
